# matcraft-kit

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: api.rst  conf.py  development.rst  index.rst
docs/cli/: README.md  adsorption.md  basic-check.md  bulk.md  defect.md  inspect.md  interface.md  molecule.md  nanocrystal.md  perturbation.md  polymer.md  solvation.md  supercell.md  surface.md  vdw-stack.md
mckit/: __init__.py  cli.py
mckit/core/: __init__.py  conversion.py  lattice.py  structure.py  tool.py
mckit/io/: __init__.py  reader.py  writer.py
mckit/observe/: __init__.py  fundamental.py  info.py  inspect.py
mckit/operate/: __init__.py  adsorption.py  bulk.py  defect_creation.py  interface.py  molecule_creation.py  molecule_utils.py  nano_crystal.py  perturbation.py  polymer.py  solvation.py  supercell.py  surface.py  vdw_stack.py
mmkit/: __init__.py  cli.py
mmkit/core/: __init__.py  structure.py  tool.py
mmkit/io/: __init__.py  writer.py
mmkit/observe/: __init__.py  check.py  fundamental.py  info.py
mmkit/operate/: __init__.py  bulk.py  defect_creation.py  interface.py  molecule_creation.py  perturbation.py  supercell.py  surface.py
tests/: test_adsorption.py  test_core_conversion.py  test_nano_crystal.py  test_polymer.py  test_solvation.py  test_vdw_stack.py
