[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matcraft-kit"
version = "0.1.3"
description = "MatCraft Toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "ase>=3.22",
    "pymatgen>=2022.0.0",
    "pymatgen-analysis-defects>=2024.10.22",
    "rdkit>=2025.9.6"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
mckit = "mckit.cli:main"


